--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
-    "react": "16.x - 17.x"
+    "react": "16.x || ^17"
   },
   "devDependencies": {
     "cpy-cli": "^3.1.0",
